--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "eslint-config-prettier": "^8.3.0",
     "jira-dev-tool": "^1.7.61",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
+    "@types/qs": "^6.9.7",
     "husky": ">=6",
     "lint-staged": ">=10",
     "prettier": "2.4.1"
