--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "jira-dev-tool": "^1.7.61",
-    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -23,14 +20,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "prettier"
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -44,19 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
-    "@types/qs": "^6.9.7",
-    "husky": ">=6",
-    "lint-staged": ">=10",
-    "prettier": "2.4.1"
-  },
-  "lint-staged": {
-    "*.{js,css,md,ts,tsx}": "prettier --write"
-  },
-  "msw": {
-    "workerDirectory": "public"
   }
 }
