--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "craco-less": "^1.20.0",
     "dayjs": "^1.10.7",
     "eslint-config-prettier": "^8.3.0",
+    "history": "^5.0.1",
     "jira-dev-tool": "^1.6.59",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.28.0",
+    "react-router": "^6.0.0-beta.8",
+    "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
