--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jira-dev-tool": "^1.6.59",
     "qs": "^6.10.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-query": "^3.28.0",
     "react-router": "^6.0.0-beta.8",
@@ -60,6 +61,7 @@
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@types/qs": "^6.9.7",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "husky": ">=6",
     "lint-staged": ">=10",
     "prettier": "2.4.1"
