--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/qs": "^6.9.7",
     "@types/react-beautiful-dnd": "^13.1.2",
     "husky": ">=6",
     "lint-staged": ">=10",
+    "msw": "^0.35.0",
     "prettier": "2.4.1"
   },
   "lint-staged": {
